--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@types/jest": "26.0.23",
     "@types/node": "15.12.4",
     "@types/serverless": "1.78.29",
+    "@types/terser-webpack-plugin": "^5.0.3",
+    "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "4.28.0",
     "@typescript-eslint/parser": "4.28.0",
     "eslint": "7.29.0",
