--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,10 +38,10 @@ jobs:
         run: yarn nx g @nrwl/node:lib test-lib --tags lib
         
       - name: Linting
-        run: yarn nx run-many --target=lint
+        run: yarn nx run-many --target=lint --all
         
       - name: Run tests
         run: yarn nx run-many --target=test --all
       
       - name: Sls package
-        run: yarn nx run-many --target=build
+        run: yarn nx run-many --target=build --all
