Nx v13 project config format

--- a/nx.json
+++ b/nx.json
@@ -25,5 +25,7 @@
   "workspaceLayout": {
     "appsDir": "stacks"
   },
-  "projects": {}
+  "cli": {
+    "defaultCollection": "@nrwl/node"
+  }
 }
