--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/webpack": "5.28.0",
     "@typescript-eslint/eslint-plugin": "5.19.0",
     "@typescript-eslint/parser": "5.19.0",
+    "esbuild": "0.14.36",
     "eslint": "8.13.0",
     "eslint-config-prettier": "8.5.0",
     "husky": "7.0.4",
@@ -53,14 +54,11 @@
     "lint-staged": "12.3.8",
     "prettier": "2.6.2",
     "serverless": "3.14.0",
+    "serverless-esbuild": "1.26.2",
     "serverless-jest-plugin": "0.4.0",
-    "serverless-webpack": "5.7.0",
     "ts-jest": "27.1.4",
     "ts-loader": "9.2.8",
-    "tsconfig-paths-webpack-plugin": "3.5.2",
-    "typescript": "4.6.3",
-    "webpack": "5.72.0",
-    "webpack-node-externals": "3.0.0"
+    "typescript": "4.6.3"
   },
   "engines": {
     "node": ">=14 <15"
