--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "lint-staged": "12.3.8",
     "prettier": "2.6.2",
     "serverless": "3.14.0",
+    "serverless-offline": "8.7.0",
     "serverless-esbuild": "1.26.2",
     "serverless-jest-plugin": "0.4.0",
     "ts-jest": "27.1.4",
