--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@nrwl/workspace": "15.0.10",
     "@types/aws-lambda": "8.10.108",
     "@types/jest": "28.1.8",
-    "@types/node": "18.7.1",
+    "@types/node": "16.11.7",
     "@types/serverless": "3.12.8",
     "@types/terser-webpack-plugin": "5.0.4",
     "@types/webpack": "5.28.0",
@@ -62,7 +62,7 @@
     "typescript": "4.8.4"
   },
   "engines": {
-    "node": ">=14 <15"
+    "node": "16"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
