--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,12 @@ Thumbs.db
 
 # Nx
 migrations.json
+
+# Yarn
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
