--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "help": "nx help",
     "prepare": "husky install"
   },
-  "dependencies": {},
   "devDependencies": {
     "@aws-sdk/types": "3.201.0",
     "@jest/transform": "28.1.3",
@@ -54,9 +53,9 @@
     "lint-staged": "13.0.3",
     "prettier": "2.7.1",
     "serverless": "3.24.1",
-    "serverless-offline": "11.2.3",
     "serverless-esbuild": "1.33.1",
     "serverless-jest-plugin": "0.4.0",
+    "serverless-offline": "11.2.3",
     "ts-jest": "28.0.8",
     "ts-loader": "9.4.1",
     "typescript": "4.8.4"
@@ -72,5 +71,6 @@
     "*.{md,json,yml,yaml,html}": [
       "prettier --write"
     ]
-  }
+  },
+  "packageManager": "yarn@3.2.4"
 }
