--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@nx/node": "16.4.2",
     "@nx/plugin": "16.4.2",
     "@nx/workspace": "16.4.2",
-    "@swc-node/register": "~1.6.0",
+    "@swc-node/register": "1.6.0",
     "@swc/cli": "0.1.62",
     "@swc/core": "1.3.67",
     "@types/aws-lambda": "8.10.119",
