--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@swc-node/register": "1.6.6",
     "@swc/cli": "0.1.62",
     "@swc/core": "1.3.75",
+    "@swc/jest": "0.2.20",
     "@types/aws-lambda": "8.10.119",
     "@types/jest": "29.5.3",
     "@types/node": "18.17.4",
