--- a/nx.json
+++ b/nx.json
@@ -1,14 +1,11 @@
 {
-  "npmScope": "nx-serverless-template",
   "affected": {
     "defaultBase": "main"
   },
   "tasksRunnerOptions": {
     "default": {
       "runner": "@nx/workspace/tasks-runners/default",
-      "options": {
-        "cacheableOperations": ["build", "lint", "test", "e2e"]
-      }
+      "options": {}
     }
   },
   "workspaceLayout": {
@@ -24,5 +21,31 @@
       "{workspaceRoot}/nx.json"
     ],
     "production": ["default", "!{projectRoot}/.eslintrc.json"]
+  },
+  "targetDefaults": {
+    "build": {
+      "cache": true
+    },
+    "@nx/jest:jest": {
+      "cache": true,
+      "inputs": ["default", "^production", "{workspaceRoot}/jest.preset.js"],
+      "options": {
+        "passWithNoTests": true
+      },
+      "configurations": {
+        "ci": {
+          "ci": true,
+          "codeCoverage": true
+        }
+      }
+    },
+    "@nx/eslint:lint": {
+      "cache": true,
+      "inputs": [
+        "default",
+        "{workspaceRoot}/.eslintrc.json",
+        "{workspaceRoot}/tools/eslint-rules/**/*"
+      ]
+    }
   }
 }
