--- a/package.json
+++ b/package.json
@@ -28,24 +28,24 @@
   "devDependencies": {
     "@aws-sdk/types": "3.468.0",
     "@jest/transform": "29.7.0",
-    "@nrwl/tao": "16.5.5",
-    "@nx/devkit": "16.5.5",
-    "@nx/eslint-plugin": "16.5.5",
-    "@nx/jest": "16.5.5",
-    "@nx/js": "16.5.5",
-    "@nx/linter": "16.5.5",
-    "@nx/node": "16.5.5",
-    "@nx/plugin": "16.5.5",
-    "@nx/workspace": "16.5.5",
-    "@swc-node/register": "1.8.0",
+    "@nrwl/tao": "18.0.3",
+    "@nx/devkit": "18.0.3",
+    "@nx/eslint": "18.0.3",
+    "@nx/eslint-plugin": "18.0.3",
+    "@nx/jest": "18.0.3",
+    "@nx/js": "18.0.3",
+    "@nx/node": "18.0.3",
+    "@nx/plugin": "18.0.3",
+    "@nx/workspace": "18.0.3",
+    "@swc-node/register": "1.6.8",
     "@swc/cli": "0.1.62",
     "@swc/core": "1.4.0",
     "@types/aws-lambda": "8.10.133",
     "@types/jest": "29.5.12",
     "@types/node": "20.11.16",
     "@types/serverless": "3.12.22",
-    "@typescript-eslint/eslint-plugin": "6.14.0",
-    "@typescript-eslint/parser": "6.14.0",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
     "esbuild": "0.20.0",
     "eslint": "8.55.0",
     "eslint-config-prettier": "9.1.0",
@@ -53,7 +53,7 @@
     "jest": "29.7.0",
     "jest-environment-node": "29.7.0",
     "lint-staged": "15.2.2",
-    "nx-cloud": "16.5.2",
+    "nx-cloud": "18.0.0",
     "prettier": "3.1.1",
     "serverless": "3.38.0",
     "serverless-esbuild": "1.50.0",
