--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@swc-node/register": "1.6.8",
     "@swc/cli": "0.1.62",
     "@swc/core": "1.4.0",
+    "@swc/jest": "0.2.36",
     "@types/aws-lambda": "8.10.133",
     "@types/jest": "29.5.12",
     "@types/node": "20.11.16",
